menu option expand list visibility issue fix

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body{
     width: 100%;
     padding: 10px;
     position: fixed;
+    z-index: 100;
 }
 #options  a{
     text-decoration: none;
